# AI-Powered-Soccer-Incident-Review-Platform

./: .env.example  .gitignore  README.md  TESTING.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth.py  main.py  pyproject.toml  settings.py  storage.py
backend/migrations/: 0001_init.sql  0002_rls.sql  0003_storage.sql  0004_video_source.sql  0005_audit_publish.sql  README.md  seed.sql
backend/pipeline/: __init__.py  calibration.py  detection.py  extract.py  goal_line.py  offside.py  source.py  stream.py
backend/routes/: analyze.py  extract.py  streams.py
backend/schemas/: __init__.py  payload.py
backend/scripts/: validate_detection.py
backend/tests/: conftest.py  test_calibration.py  test_endpoints_smoke.py  test_goal_line.py  test_offside.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: actions.ts  login-form.tsx  page.tsx
frontend/src/app/official/: layout.tsx
frontend/src/app/viewer/: layout.tsx  page.tsx
frontend/src/components/: app-shell.tsx  clip-player.tsx  pitch-diagram.tsx  referee-note.tsx  sign-out-button.tsx  stream-status-banner.tsx  verdict-card.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  status-pill.tsx
frontend/src/lib/: ai-service.ts  auth.ts  database.types.ts  profanity.ts  utils.ts  video-source.ts  zod.ts
frontend/src/lib/actions/: incidents.ts  matches.ts  (+1 more)
(+16 files in other folders)
