[project]
name = "atletico-backend"
version = "0.1.0"
description = "Atletico Intelligence AI/CV service for offside and goal-line incident review."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "ultralytics>=8.3",
  "opencv-python-headless>=4.10",
  "numpy>=1.26,<2.2",
  "shapely>=2.0",
  "httpx>=0.27",
  "python-multipart>=0.0.12",
  "supabase>=2.10",
  "ffmpeg-python>=0.2",
  "python-dotenv>=1.0",
  "pyjwt[crypto]>=2.9",
  "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "syrupy>=4.7",
  "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
